--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -108,3 +108,16 @@ div.error {
   border-radius: 4px;
   margin: 20px 0;
 }
+
+.deleteIcon {
+  background: rgb(236, 236, 236);
+  position: absolute;
+  top: 30px;
+  right: 5%;
+  cursor: pointer;
+  border: 1px solid rebeccapurple;
+  padding: 0 7px;
+}
+.deleteIcon:hover {
+  background: rgb(162, 160, 160);
+}
